change autoloading to psr-4

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "autoload": {
-        "classmap": [
-            "./"
-        ]
+        "psr-4": {
+            "Patterns\\": "src/Patterns/"
+        }
     }
 }
