--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
     "name": "celyes/design-patterns",
-    "require": {
-        "phpunit/phpunit": "^9"
-    },
+    "description": "Design patterns written in PHP",
+    "license": ["MIT"],
     "authors": [
         {
-            "name": "celyes",
+            "name": "Ilyes Chouia",
             "email": "celyes02@gmail.com"
         }
     ],
+    "minimum-stability": "stable",
+    "require": {
+        "php": ">=7.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
+    },
     "autoload": {
         "psr-4": {
             "Patterns\\": "src/Patterns/"
