--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
