--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,26 @@
 {
-    "name": "celyes/design-patterns",
-    "description": "Design patterns written in PHP",
-    "license": ["MIT"],
-    "authors": [
-        {
-            "name": "Ilyes Chouia",
-            "email": "celyes02@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": ">=7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Patterns\\": "src/Patterns/"
-        }
+  "name": "celyes/design-patterns",
+  "description": "Design patterns written in PHP",
+  "license": [
+    "MIT"
+  ],
+  "authors": [
+    {
+      "name": "Ilyes Chouia",
+      "email": "celyes02@gmail.com"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": ">=7.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9",
+    "squizlabs/php_codesniffer": "^3.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Patterns\\": "src/Patterns/"
+    }
+  }
 }
