--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,6 +31,9 @@ jobs:
     
     - name: Run tests
       run: composer test
+      run: composer analyse:src
+      run: composer check
+
       
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
