--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
     }
   },
   "scripts": {
-    "check": "vendor/bin/phpcs src/Patterns --standard=PSR12",
+    "check": "vendor/bin/phpcs",
     "test": "./vendor/bin/phpunit --colors=always", 
     "test:verbose": "@test -vvv",
-    "analyse:src": "vendor/bin/phpstan analyse src",
+    "analyse:src": "vendor/bin/phpstan analyse src/ -l 9",
     "analyse:debug": "vendor/bin/phpstan analyse --debug src"
   }
 }
