--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,9 +30,10 @@ jobs:
       run: composer install --prefer-dist --no-progress
     
     - name: Run tests
-      run: composer test
-      run: composer analyse:src
-      run: composer check
+      run: |
+        composer test
+        composer analyse:src
+        composer check
 
       
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
